--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 	<header>
+	
 		<a href="#main-nav" class="nav-trigger">
 			Menu <span class='menu-icon'></span>
 		</a>
@@ -48,12 +49,14 @@
 						<h1 class='Book-title'>Internetism<small>.org</small></h1>
 						<h2 class='Book-tagline'>How to create wealth in the internet economy</h2>
 						<p class='Book-author'>
-							<a href="http://amirski.com" target="_blank">Amirski.com</a>
+							By <a href="http://amirski.com" target="_blank">Amirski.com</a>
 						</p>
 						<div class="row Book-buttons">
 							<a href="assets/Internetism_v50.pdf" class="btn btn-block btn-outline-primary" target="_blank"><i class="fa fa-arrow-down"></i> Download now (for FREE)</a>
 							<a href="https://www.amazon.co.uk/Internetism-belief-Internet-wealthier-place/dp/1499711719/" class="btn btn-block btn-outline-primary" target="_blank"><i class="fa fa-amazon"></i> Buy on Amazon.co.uk (£3.44)</a>
+							<a href="http://amirski.com/product/internetism-org/" class="btn btn-block btn-outline-primary" target="_blank"><i class="fa fa-shopping-cart"></i> Buy on Amirski.com (Dedicated)</a>
 							<a href="https://soundcloud.com/amirskianzur/sets/internetism" class="btn btn-block btn-outline-primary" target="_blank"><i class="fa fa-soundcloud"></i> Listen to Audiobook</a>
+							<a href="https://play.google.com/store/apps/details?id=com.academy.webpreneur.internetismbookapp" class="btn btn-block btn-outline-primary" target="_blank"><i class="fa fa-android"></i> Download Android App</a>
 						</div>
 
 						<p class='Book-description'>Believe! Education, employment, media, retail, relationships and almost every industry and aspect of life has been impacted by the Internet. Internetism is simply to strengthen your belief that the Internet will make the world a better place. For you. Your family. Your community. And everyone.</p>
