--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<header>
-	
+
 		<a href="#main-nav" class="nav-trigger">
 			Menu <span class='menu-icon'></span>
 		</a>
@@ -29,6 +29,7 @@
 						<a href="https://soundcloud.com/amirskianzur/sets/internetism" title="Listen to Audiobook" target="_blank"><i class="fa fa-2x fa-soundcloud"></i></a>
 						<a href="https://www.amazon.co.uk/Internetism-belief-Internet-wealthier-place/dp/1499711719/" title="Buy on Amazon" target="_blank"><i class="fa fa-2x fa-amazon"></i></a>
 						<a href="assets/Internetism_v50.pdf" title="Download FREE" target="_blank"><i class="fa fa-2x fa-arrow-down"></i></a>
+						<a href="http://amirski.com/product/internetism-org/" title="Buy on Amirski.com (Dedicated)" target="_blank"><i class="fa fa-2x fa-shopping-cart"></i></a>
 					</div>
 				</li>
 			</ul>
