--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 						<a href="https://soundcloud.com/amirskianzur/sets/internetism" title="Listen to Audiobook" target="_blank"><i class="fa fa-2x fa-soundcloud"></i></a>
 						<a href="https://www.amazon.co.uk/Internetism-belief-Internet-wealthier-place/dp/1499711719/" title="Buy on Amazon" target="_blank"><i class="fa fa-2x fa-amazon"></i></a>
 						<a href="assets/Internetism_v50.pdf" title="Download FREE" target="_blank"><i class="fa fa-2x fa-arrow-down"></i></a>
+
 						<!-- <a href="http://amirski.com/product/internetism-org/" title="Buy on Amirski.com (Dedicated)" target="_blank"><i class="fa fa-2x fa-shopping-cart"></i></a> -->
 					</div>
 				</li>
@@ -54,14 +55,18 @@
 						</p>
 						<div class="row Book-buttons">
 							<a href="assets/Internetism_v50.pdf" class="btn btn-block btn-outline-primary" target="_blank"><i class="fa fa-arrow-down"></i> Download now (for FREE)</a>
-							<a href="https://www.amazon.co.uk/Internetism-belief-Internet-wealthier-place/dp/1499711719/" class="btn btn-block btn-outline-primary" target="_blank"><i class="fa fa-amazon"></i> Buy on Amazon.co.uk (£3.44)</a>
-							<!-- <a href="http://amirski.com/product/internetism-org/" class="btn btn-block btn-outline-primary" target="_blank"><i class="fa fa-shopping-cart"></i> Buy on Amirski.com (Dedicated)</a> -->
-							<a href="https://soundcloud.com/amirskianzur/sets/internetism" class="btn btn-block btn-outline-primary" target="_blank"><i class="fa fa-soundcloud"></i> Listen to Audiobook</a>
-							<a href="https://play.google.com/store/apps/details?id=com.academy.webpreneur.internetismbookapp" class="btn btn-block btn-outline-primary" target="_blank"><i class="fa fa-android"></i> Download Android App</a>
+							<a href="https://www.amazon.co.uk/Internetism-belief-Internet-wealthier-place/dp/1499711719/" class="btn btn-block btn-outline-primary" target="_blank"><i class="fa fa-amazon"></i> Buy Paperback on Amazon.co.uk</a>
+							<a href="#" class="btn btn-block btn-outline-primary" target="_blank"><i class="fa fa-amazon"></i> Buy Paperback on Amazon.com</a>
+							<a href="http://amiranzur.com/product/internetism-org/" class="btn btn-block btn-outline-primary" target="_blank"><i class="fa fa-shopping-cart"></i> Buy signed Paperback directly from the Author</a>
+							<a href="#" class="btn btn-block btn-outline-primary" target="_blank"><i class="fa fa-user"></i> Become a coauthor (for FREE)</a>
+							<a href="https://soundcloud.com/amirskianzur/sets/internetism" class="btn btn-block btn-outline-primary" target="_blank"><i class="fa fa-soundcloud"></i> Listen to Audiobook (for FREE)</a>
+							<a href="https://play.google.com/store/apps/details?id=com.academy.webpreneur.internetismbookapp" class="btn btn-block btn-outline-primary" target="_blank"><i class="fa fa-android"></i> Download Android App and listen (for FREE)</a>
+							<a href="https://play.google.com/store/apps/details?id=com.academy.webpreneur.internetismbookapp" class="btn btn-block btn-outline-primary" target="_blank"><i class="fa fa-apple"></i> Download iOS App and listen (for FREE)</a>
+								
 						</div>
 
 						<p class='Book-description'>Believe! Education, employment, media, retail, relationships and almost every industry and aspect of life has been impacted by the Internet. Internetism is simply to strengthen your belief that the Internet will make the world a better place. For you. Your family. Your community. And everyone.</p>
-						<p>Simplified and written by Amirski.com an Internet expert with 15 years experience online with clients like Amazon, Google, Intel, Samsung, Xbox as well as thousands of webpreneurs you might not have heard of yet.</p> 
+						<p>Simplified and written by AmirAnzur.com an Internet expert with 15 years experience online with clients like Amazon, Google, Intel, Samsung, Xbox as well as thousands of webpreneurs you might not have heard of yet.</p> 
 						<p><strong>This book is essential reading for those that would like to accelerate their journey online.</strong></p>
 					</div>
 
