--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 						<div class="row Book-buttons">
 							<a href="assets/Internetism_v50.pdf" class="btn btn-block btn-outline-primary" target="_blank"><i class="fa fa-arrow-down"></i> Download now (for FREE)</a>
 							<a href="https://www.amazon.co.uk/Internetism-belief-Internet-wealthier-place/dp/1499711719/" class="btn btn-block btn-outline-primary" target="_blank"><i class="fa fa-amazon"></i> Buy Paperback on Amazon.co.uk</a>
-							<a href="#" class="btn btn-block btn-outline-primary" target="_blank"><i class="fa fa-amazon"></i> Buy Paperback on Amazon.com</a>
+							<a href="https://www.amazon.com/Internetism-Internet-wealthier-2014-05-28-Paperback/dp/B012TQYKMQ/ref=sr_1_3?ie=UTF8&qid=1496733659&sr=8-3&keywords=internetism+book" class="btn btn-block btn-outline-primary" target="_blank"><i class="fa fa-amazon"></i> Buy Paperback on Amazon.com</a>
 							<a href="http://amiranzur.com/product/internetism-org/" class="btn btn-block btn-outline-primary" target="_blank"><i class="fa fa-shopping-cart"></i> Buy signed Paperback directly from the Author</a>
-							<a href="#" class="btn btn-block btn-outline-primary" target="_blank"><i class="fa fa-user"></i> Become a coauthor (for FREE)</a>
+							<a href="assets/Internetism_v50.pdf" class="btn btn-block btn-outline-primary" target="_blank"><i class="fa fa-user"></i> Become a coauthor (for FREE)</a>
 							<a href="https://soundcloud.com/amirskianzur/sets/internetism" class="btn btn-block btn-outline-primary" target="_blank"><i class="fa fa-soundcloud"></i> Listen to Audiobook (for FREE)</a>
 							<a href="https://play.google.com/store/apps/details?id=com.academy.webpreneur.internetismbookapp" class="btn btn-block btn-outline-primary" target="_blank"><i class="fa fa-android"></i> Download Android App and listen (for FREE)</a>
 							<a href="https://play.google.com/store/apps/details?id=com.academy.webpreneur.internetismbookapp" class="btn btn-block btn-outline-primary" target="_blank"><i class="fa fa-apple"></i> Download iOS App and listen (for FREE)</a>
